fix(kit): `Textarea` use balance text-wrap in safari (#8666) (#8672)

--- a/projects/kit/components/textarea/textarea.style.less
+++ b/projects/kit/components/textarea/textarea.style.less
@@ -41,6 +41,13 @@
     &[data-size='l']._has-counter {
         --tui-textarea-height: @heightCounter;
     }
+
+    // https://bugs.webkit.org/show_bug.cgi?id=278558
+    .safari-only({
+        .t-pseudo-content, .t-input {
+            text-wrap: balance;
+        }
+    });
 }
 
 .t-outline {
